--- a/src/components/register.html
+++ b/src/components/register.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/register.css">
 </head>
 <body>
     <div>
-        <h1>Login</h1>
+        <h1>Registrar-se</h1>
+        <input type="text" placeholder="Nome">
+        <br><br>
         <input type="text" placeholder="Email">
         <br><br>
         <input type="password" placeholder="Senha">
