--- a/src/components/login.html
+++ b/src/components/login.html
@@ -5,16 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="../css/gui.css">
     <link rel="stylesheet" href="../css/login.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
 </head>
+
+<script type="module">
+    import {appInstance} from "../js/app.js"
+    window.app = appInstance;
+
+</script> 
+
 <body>
-    <div>
+    <nav class="navbar navbar-light bg-light">
+        <div>
+            <button id="btnToggleDrawer" class="navbar-toggler mx-2" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">EtecZl</a>
+        </div>
+        <div id="installPwaWebAPP"></div>
+        <div id="user_identification_div" class="d-flex mx-3">
+          <i class="bi bi-person-circle mx-2"></i>
+          <a class="nav-link" href="#">User Name</a>
+        </div>
+      </nav>
+
+    <div class="login_div">
         <h1>Login</h1>
-        <input type="text" placeholder="Email">
+        <input class="login_input" type="text" placeholder="Email">
         <br><br>
-        <input type="password" placeholder="Senha">
+        <input class="login_input" type="password" placeholder="Senha">
         <br><br>
-        <button>Enviar</button>
+        <button class="login_btn">Enviar</button>
     </div>
+
+    <div id="menuDrawer" class="drawer container border border-primary-subtle rounded-end">
+        <script id="DrawerMenuTemplate" type="text/template">
+          <div class="container border border-primary-subtle rounded-end">    
+            <div class="row justify-content-center">
+              <div class="col-12 col-md-6 text-center py-3">
+                <h1 class="text-white">MENU PRINCIPAL</h1>
+              </div>
+            </div>
+          </div>
+          <div>
+            <br>
+              <div class="container">
+                {{ #menuItens }}
+                <a href="{{ link }}">
+                  <button type="button" class="btn btn-primary w-100" data-action="{{ action }}"
+                      onclick="window.app.guiCtrl.execDrawerMenuItemAction(this, '{{action}}');">
+                        {{ label }}    
+                  </button>
+                </a>  
+                  <hr>
+                {{ /menuItens }}
+              </div>
+          </div>
+        </script>
+      </div>
 </body>
 </html>
