--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,8 +1,10 @@
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-image: linear-gradient(45deg, rgb(255, 255, 255), rgb(0, 0, 0));
+    background-attachment: fixed;
 }
-div{
+.login_div{
     background-color: rgba(0, 0, 0, 0.9);
     position: absolute;
     top: 50%;
@@ -12,13 +14,13 @@ div{
     border-radius: 15px;
     color: #fff;
 }
-input{
+.login_input{
     padding: 15px;
     border: none;
     outline: none;
     font-size: 15px;
 }
-button{
+.login_btn{
     background-color: rgb(252, 252, 252);
     border: none;
     padding: 15px;
@@ -28,7 +30,7 @@ button{
     font-size: 15px;
     
 }
-button:hover{
+.login_btn:hover{
     background-color: rgb(255, 255, 255);
     cursor: pointer;
 }
