--- a/src/components/register.html
+++ b/src/components/register.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/register.css">
+    <script src="../js/View/registerView.js"></script>
 </head>
 <body>
     <div>
         <h1>Registrar-se</h1>
-        <input type="text" placeholder="Nome">
+        <input type="text" placeholder="Nome" id="nome">
         <br><br>
-        <input type="text" placeholder="Email">
+        <input type="text" placeholder="Email" id="email">
         <br><br>
-        <input type="password" placeholder="Senha">
+        <input type="password" placeholder="Senha" id="senha">
         <br><br>
-        <button>Enviar</button>
+        <button id="btnRegister">Enviar</button>
     </div>
 </body>
 </html>
