--- a/src/components/register.html
+++ b/src/components/register.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    
+    <script src="../js/View/registerView.js"></script>
     <link rel="stylesheet" href="../css/gui.css">
     <link rel="stylesheet" href="../css/register.css">
 </head>
@@ -40,7 +40,7 @@
         <br><br>
         <input type="password" placeholder="Senha">
         <br><br>
-        <button>Enviar</button>
+        <button id="btnRegister">Enviar</button>
     </div>
 </body>
 </html>
