--- a/src/components/register.html
+++ b/src/components/register.html
@@ -18,19 +18,42 @@
 </script> 
 
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar etecnav">
         <div>
             <button id="btnToggleDrawer" class="navbar-toggler mx-2" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">EtecZl</a>
-        </div>
-        <div id="installPwaWebAPP"></div>
-        <div id="user_identification_div" class="d-flex mx-3">
-          <i class="bi bi-person-circle mx-2"></i>
-          <a class="nav-link" href="#">User Name</a>
+            <a class="navbar-brand" href="#">
+              <img src="../public/icons/logo-etec.png" alt="bruh" class="logo" width="80px" height="auto">
+            </a>
         </div>
       </nav>
+
+      <div id="menuDrawer" class="drawer container rounded-end">
+        <script id="DrawerMenuTemplate" type="text/template">
+          <div class="container drawermaintext rounded-end">    
+            <div class="row justify-content-center">
+              <div class="col-12 col-md-6 text-center py-3">
+                <h1 class="text-white maintext">MENU PRINCIPAL</h1>
+              </div>
+            </div>
+          </div>
+          <div>
+            <br>
+              <div class="container">
+                {{ #menuItens }}
+                <a href="{{ link }}" class="row justify-content-center">
+                  <button type="button" class="btn btn-dark w-50" data-action="{{ action }}"
+                      onclick="window.app.guiCtrl.execDrawerMenuItemAction(this, '{{action}}');">
+                        {{ label }}    
+                  </button>
+                </a>  
+                  <hr>
+                {{ /menuItens }}
+              </div>
+          </div>
+        </script>
+        </div>
 
     <div class="register_div">
         <h1>Registrar-se</h1>
