--- a/src/css/register.css
+++ b/src/css/register.css
@@ -1,10 +1,15 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(45deg, rgb(255, 255, 255), rgb(0, 0, 0));
+    background-image: linear-gradient(45deg, rgb(255, 139, 139), rgb(80, 0, 0));
     background-attachment: fixed;
 }
+
+.etecnav {
+    background-image: linear-gradient(to right, rgb(255, 225, 225), rgb(255, 255, 230), rgb(218, 218, 255));
+}
+
 .register_div{
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(87, 0, 0, 0.692);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -12,6 +17,7 @@ body{
     padding: 80px;
     border-radius: 15px;
     color: #fff;
+    border: groove 3px rgb(73, 31, 31);
 }
 .register_input{
     padding: 15px;
@@ -26,8 +32,7 @@ body{
     width: 100%;
     border-radius: 10px;
     color: rgb(0, 0, 0);
-    font-size: 15px;
-    
+    font-size: 15px;    
 }
 .register_btn:hover{
     background-color: rgb(255, 255, 255);
