--- a/src/components/login.html
+++ b/src/components/login.html
@@ -11,15 +11,15 @@
     <link rel="stylesheet" href="../css/gui.css">
     <link rel="stylesheet" href="../css/login.css">
     <!-- <script src="../js/View/loginView.js"></script> -->
-    <script src="../js/View/loginView.js"></script>i
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
     
 </head>
-
 <script type="module">
     import {appInstance} from "../js/app.js"
-    window.app = appInstance;
-
+    import { login } from "../js/View/loginView.js";
+      window.app = appInstance;
+    window.login = login()
+    
 </script> 
 
 <body>
@@ -40,7 +40,7 @@
         <br><br>
         <input class="login_input" type="password" placeholder="Senha">
         <br><br>
-        <button class="btnLogin">Enviar</button>
+        <button class="btnLogin" id="btnLogin" onclick="window.login">Enviar</button>
     </div>
 
     <div id="menuDrawer" class="drawer container rounded-end">
