--- a/src/components/register.html
+++ b/src/components/register.html
@@ -6,16 +6,17 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <script src="../js/View/registerView.js"></script>
     <link rel="stylesheet" href="../css/gui.css">
     <link rel="stylesheet" href="../css/register.css">
 </head>
 
 <script type="module">
     import {appInstance} from "../js/app.js"
-    window.app = appInstance;
+    import { cadastrar } from "../js/View/registerView.js";
+      window.app = appInstance;
+    window.register = cadastrar()
 
-</script> 
+</script>
 
 <body>
     <nav class="navbar etecnav">
@@ -57,13 +58,13 @@
 
     <div class="register_div">
         <h1>Registrar-se</h1>
-        <input type="text" placeholder="Nome">
+        <input type="text" placeholder="Nome" id="nome">
         <br><br>
-        <input type="text" placeholder="Email">
+        <input type="text" placeholder="Email" id="email">
         <br><br>
-        <input type="password" placeholder="Senha">
+        <input type="password" placeholder="Senha" id="senha">
         <br><br>
-        <button id="btnRegister">Enviar</button>
+        <button id="btnRegister" onclick="window.register">Enviar</button>
     </div>
 </body>
 </html>
