--- a/src/components/login.html
+++ b/src/components/login.html
@@ -36,9 +36,9 @@
 
     <div class="login_div">
         <h1>Login</h1>
-        <input class="login_input" type="text" placeholder="Email">
+        <input class="login_input" type="text" placeholder="Email" id="email">
         <br><br>
-        <input class="login_input" type="password" placeholder="Senha">
+        <input class="login_input" type="password" placeholder="Senha" id="senha">
         <br><br>
         <button class="btnLogin" id="btnLogin" onclick="window.login">Enviar</button>
     </div>
